# Minerd

./: Makefile.am  README  compat.h  configure.ac  cpu-miner.c  cpu-miner.cpp  example-cfg.json  hashblock.h  miner.h  momentum.cpp  util.c
